--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <div id="page">
     <button id="connect">Connect</button>
+    <div>Your name is: <div id="namePlaceholder">dd</div></div>
     <p id="debug"></p>
 
     <div id="chat">
