improved speech bubles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="chat">
       <div id="msg">
       </div>
-      <input type="text" id="chatbox" disabled>
+      <input type="text" id="chatbox" placeholder="Type here" disabled>
     </div>
   </div>
   <script type="module" src="/src/renderer.ts"></script>
