refacto, cleaning code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div id="chat">
-      <div id="msg">
+      <div id="msgList">
       </div>
       <input type="text" id="chatbox" placeholder="Type here" disabled>
     </div>
