--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
   <div id="page">
     <div id="info">
       <h1>Chatroom</h1>
-      <p id="statusParent">status: <strong id="status">offline</strong></p>
-      <p id="namePlaceholderParent">Your name is: <strong id="namePlaceholder"></strong></p>
+      <p id="namePlaceholder"></strong></p>
       <button class="btn connect">Connect</button>
-      <button class="btn disconnect" disabled>Disconnect</button>
-      <p id="debug"></p>
+      <button class="btn disconnect" disabled>Disconnected</button>
     </div>
 
     <div id="chat">
       <div id="msgList">
+        <p id="debug"></p>
       </div>
       <input type="text" id="chatbox" placeholder="Type here" disabled>
     </div>
